--- a/src/components/BottomNav/BottomNav.css
+++ b/src/components/BottomNav/BottomNav.css
@@ -2,5 +2,5 @@
     background-color: #39445a;
     color: #fff;
     width: 100%;
-    box-shadow:-2px -1px 5px 2px  black;
+    /* box-shadow:-2px -1px 5px 2px  black; */
 }
