--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@
 }
 .page{
   margin-top: 144px;
-  
 }
 
 .pageTitle{
@@ -24,17 +23,17 @@
   display: flex;
   justify-content: center;
   font-family: "Montserrat", sans-serif;
-  font-size: 2vw;
+  font-size: 4vw;
   padding: 4px;
   border-radius: 50px;
   color: whitesmoke;
 }
 
-/* @media (max-width: 700px) {
+@media (max-width: 700px) {
   .pageTitle {
     font-size: 6.4vw;
   }
-} */
+}
   
 
 
