add review component

--- a/src/components/BottomNav/BottomNav.css
+++ b/src/components/BottomNav/BottomNav.css
@@ -1,5 +1,5 @@
 .bottom-nav {
-    background-color: #39445a;
+    background-color: #0A0908;
     color: #fff;
     width: 100%;
     /* box-shadow:-2px -1px 5px 2px  black; */
