--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     /* text-transform: uppercase; */
-    background-color: #2d313a;
+    background-color: #0A0908;
     /* font-family: 'Montserrat', sans-serif; */
     /* font-size: 4vw; */
     padding-bottom: 15px;
