--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,15 @@
 
 body {
-  background-color: #39445a;
-  background-image: url("./assets/images/movies\ background.jpeg");
-  background-size: cover;
+  background-color: #22333B;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  }
 
 .App{
-  background-color: #39445a;
+  background-color: #22333B;
   
 }
